<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlessingLetter</string>
    <string name="little">LITTLE</string>
    <string name="blessing">BLESSING</string>
    <string name="chinese">小確信</string>
    <string name="action_settings">Settings</string>
    <string name="fb">FB</string>
    <string name="_weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="_wechat">微信</string>
    <string name="app_id">1451202071823936</string>

</resources>
